--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
         <h2 class="portfolio__title">Slides</h2>
         <p class="portfolio__slide">
-            <a href="static/images/IJCAI2022-differentiable-optimization-brandon-amos.pdf">"[Part 1] Differentiable optimization-based modeling for machine learning", Brandon Amos</a> <br>
-            <a href="static/images/IJCAI2022-decision-focused-learning-andrew-perrault.pdf">"[Part 2] Decision-focused learning: theory, applications, challenges", Andrew Perrault </a> <br>
-            <a href="static/images/IJCAI2022-scalability-and-solution-kai-wang.pdf">"[Part 3] Scalability challenges and solutions to decision-focused learning", Kai Wang</a> <br>
+            <a href="static/images/IJCAI2022-differentiable-optimization-brandon-amos.pdf">[Part 1] "Differentiable optimization-based modeling for machine learning", Brandon Amos</a> <br>
+            <a href="static/images/IJCAI2022-decision-focused-learning-andrew-perrault.pdf">[Part 2] "Decision-focused learning: theory, applications, challenges", Andrew Perrault </a> <br>
+            <a href="static/images/IJCAI2022-scalability-and-solution-kai-wang.pdf">[Part 3] "Scalability challenges and solutions to decision-focused learning", Kai Wang</a> <br>
         </p>
       </div>
     </section>
