--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p class="portfolio__slide">
             <a href="static/images/IJCAI2022-differentiable-optimization-brandon-amos.pdf">[Part 1] "Differentiable optimization-based modeling for machine learning", Brandon Amos</a> <br>
             <a href="static/images/IJCAI2022-decision-focused-learning-andrew-perrault.pdf">[Part 2] "Decision-focused learning: theory, applications, challenges", Andrew Perrault </a> <br>
-            <a href="static/images/IJCAI2022-scalability-and-solution-kai-wang.pdf">[Part 3] "Scalability challenges and solutions to decision-focused learning", Kai Wang</a> <br>
+            <a href="static/images/IJCAI2022-scalability-and-solution-kai-wang.pdf">[Part 3] "Scalability challenges and solutions to decision-focused learning", Kai Wang</a> <br><br><br><br>
         </p>
       </div>
     </section>
@@ -101,7 +101,7 @@
         <h2 class="contact__title">Contact us</h2>
         <p class="contact__descr">Kai Wang &nbsp | &nbsp <a class="contact__card-item email">kaiwang@g.harvard.edu</a></p>
         <p class="contact__descr">Andrew Perrault &nbsp | &nbsp <a class="contact__card-item email">perrault.17@osu.edu</a></p>
-        <p class="contact__descr">Brandon Amos &nbsp | &nbsp <a class="contact__card-item email">bda@meta.com</a></p> <br><br><br>
+        <p class="contact__descr">Brandon Amos &nbsp | &nbsp <a class="contact__card-item email">bda@meta.com</a></p> <br><br>
       </div>
     </section>
     <!-- $Page footer-->
